style: modified the height of main to avoid overflow

--- a/base_static/css/login.css
+++ b/base_static/css/login.css
@@ -2,7 +2,7 @@ main{
     display: flex;
     justify-content: center;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
 }
 .container_login {
     background-color: #fff;
